{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 18,
  "lineage": "5e44ead8-5d0d-e4c4-675f-e9b2fd1c99e1",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:166704849039:instance/i-00c7b9cb19de4a3fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c7b9cb19de4a3fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fe5fb0b24c2c7b7",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_ip": "44.211.42.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9ccc6c5dc108deb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085bebf205f00532b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08490075b3d99b448"
            ]
          },
          "dependencies": [
            "module.vpc_subnet_nsg.aws_security_group.main",
            "module.vpc_subnet_nsg.aws_subnet.main",
            "module.vpc_subnet_nsg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_nsg",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166704849039:internet-gateway/igw-004e73ade462b455a",
            "id": "igw-004e73ade462b455a",
            "owner_id": "166704849039",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-022225cb6168cc3a7"
          },
          "dependencies": [
            "module.vpc_subnet_nsg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_nsg",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166704849039:route-table/rtb-002607e274e9f82da",
            "id": "rtb-002607e274e9f82da",
            "owner_id": "166704849039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004e73ade462b455a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_route_table"
            },
            "tags_all": {
              "Name": "my_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-022225cb6168cc3a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnet_nsg.aws_internet_gateway.igw",
            "module.vpc_subnet_nsg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_nsg",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0475cef51450d5e1d",
            "route_table_id": "rtb-002607e274e9f82da",
            "subnet_id": "subnet-085bebf205f00532b"
          },
          "dependencies": [
            "module.vpc_subnet_nsg.aws_internet_gateway.igw",
            "module.vpc_subnet_nsg.aws_route_table.route_table",
            "module.vpc_subnet_nsg.aws_subnet.main",
            "module.vpc_subnet_nsg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_nsg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166704849039:security-group/sg-08490075b3d99b448",
            "description": "Security group for the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08490075b3d99b448",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "166704849039",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022225cb6168cc3a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnet_nsg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_nsg",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166704849039:subnet/subnet-085bebf205f00532b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085bebf205f00532b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166704849039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-022225cb6168cc3a7"
          },
          "dependencies": [
            "module.vpc_subnet_nsg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_nsg",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166704849039:vpc/vpc-022225cb6168cc3a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2af20cfc06bf797",
            "default_route_table_id": "rtb-09ef92327c6b7e49b",
            "default_security_group_id": "sg-00dfd337e46dca7b0",
            "dhcp_options_id": "dopt-041e6abdbe45c7b9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022225cb6168cc3a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ef92327c6b7e49b",
            "owner_id": "166704849039"
          }
        }
      ]
    }
  ]
}